All pages have per default a bigger bottom margin to ensure the full content is visible and not hidden underthe bubble state nav

--- a/prototype/styles.css
+++ b/prototype/styles.css
@@ -12,9 +12,8 @@
 }
 
 body {
-    min-height: 100vh;
     overflow-anchor: none;
-    margin: 3em auto 3em auto;
+    margin: auto auto 7em auto;
     padding-top: 6em;
 }
 
